<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="295dp"
        android:layout_height="202dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <CheckBox
            android:id="@+id/ArmsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            app:layout_column="0"
            app:layout_row="0"
            android:text="@string/arms" />

        <CheckBox
            android:id="@+id/NoseBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/nose"
            app:layout_column="0"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/EarsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ears"
            app:layout_column="0"
            app:layout_row="2"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/GlassesBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glasses"
            app:layout_column="0"
            app:layout_row="3"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/HatBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hat"
            app:layout_column="0"
            app:layout_row="4"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/EyesBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            app:layout_column="1"
            app:layout_row="0"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/ShoesBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            app:layout_column="1"
            app:layout_row="1"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/MouthBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mouth"
            app:layout_column="1"
            app:layout_row="2"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/EyebrowsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyebrows"
            app:layout_column="1"
            app:layout_row="3"
            android:onClick="checkClicked" />

        <CheckBox
            android:id="@+id/MustacheBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mustache"
            app:layout_column="1"
            app:layout_row="4"
            android:onClick="checkClicked" />

    </android.support.v7.widget.GridLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="369dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="body"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/ArmsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/ShoesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />

        <ImageView
            android:id="@+id/EyebrowsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/EyesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/EarsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/GlassesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/HatView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/MouthView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/NoseView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/MustacheView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mustache"
            android:visibility="invisible" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>